fixed some spacing, oops

--- a/rekindle.css
+++ b/rekindle.css
@@ -28,226 +28,8 @@
 	{
 		text-align: center;
 		margin-top: 120px;
-		margin-bottom: 120px;
+		margin-bottom: 200px;
 	}
 
 
 
-
-/********************************************************************/
-/* BASIC                                                            */
-/********************************************************************/
-
-	body
-	{
-		background: #fff;
-		color: #2B2B2B;
-	}
-
-	body,input,textarea,select
-	{
-
-		font-family: Avenir;
-		src: url(avenir.ttc);
-		font-size: 18pt;
-		font-weight: 200;
-		line-height: 1.75em;
-		color: #2B2B2B;			/* dark gray */
-		-webkit-text-stroke: 0.15px;
-	}
-
-	h1
-	{
-		font-family: Englebert;
-		font-size: 4em;
-		font-weight: 200;
-		padding-left: 30px;
-
-	}
-
-
-	h2
-	{
-		font-size: 1em;
-		font-weight: 200;
-
-		text-decoration:underline;
-	}
-
-	h3
-	{
-		font-size: 0.8em;
-		font-weight: 200;
-	}
-
-
-
-
-/********************************************************************/
-/* SECTIONS                                                         */
-/********************************************************************/
-
-	
-	.signup
-	{
-		width: 800px;
-		text-align: left;
-		margin-left: auto ;
-  		margin-right: auto ;
-  		padding: 2em 0 2em 0;
-	}
-
-	.signupForm
-	{
-		
-		
-		
-  		
-	}
-	
-	#signupForm > section
-	{
-		top:0;
-		height: 100%;
-		margin-bottom: 1.5em;
-		padding-left: 20px;
-		line-height: 2em;
-		width: 50%;
-		margin-left: 30px;
-	}
-
-	#signupForm > section.top
-	{
-		width: 100%;
-		padding-left: 0;
-		margin-left: 0;
-	}
-
-	#signupForm > section.name
-	{
-		margin-left: 30px;
-
-	}
-
-	#signupForm > section.memBox
-	{
-
-	}
-
-	/* container for work and school sections */
-
-	#container > section
-	{
-		
-		top:0;
-		line-height: 2em;
-	}
-
-	#container > section.work
-	{
-		float: left;
-		
-		height: 100%;
-		margin-bottom: 1.5em;
-		padding-left: 20px;
-		width: 50%;
-		
-		
-		margin-left: 30px;
-	}
-
-	#container > section.school
-	{
-		float: left;
-	}
-
-	/* This uploads to the memory box, support dnd later 
-
-	source http://html5demos.com/dnd-upload#view-source  */
-
-	#holder
-	{
-		/*position: relative;*/
-		border: 10px dashed #2B2B2B;
-		width: 600px; 
-		min-height: 300px; 
-		margin-left : auto;
-		margin-right : auto;
-	}
-
-	#holder img 
-	{ 
-		display: block; 
-		margin: 10px auto; 
-	}
-
-
-
-	/* make things look pretty */ 
-	
-	.button
-		{
-			position: relative;
-			display: inline-block;
-			border-radius: 0.35em;
-			color: black !important;
-			text-decoration: none;
-			padding: 0.75em 2.5em 0.75em 2.5em;
-			margin-right: 30px;
-			margin-left: 30px;
-			/*background-color: #ff7800;*/
-			border: 8;
-			border-style: solid;
-			border-color: black;
-			cursor: pointer;
-			/*
-			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url('images/overlay.png');
-			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url('images/overlay.png');
-			background-image: -o-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url('images/overlay.png');
-			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url('images/overlay.png');
-			background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url('images/overlay.png');			
-			*/
-			-moz-transition: background-color 0.35s ease-in-out;
-			-webkit-transition: background-color 0.35s ease-in-out;
-			-o-transition: background-color 0.35s ease-in-out;
-			-ms-transition: background-color 0.35s ease-in-out;
-			transition: background-color 0.35s ease-in-out;
-		}
-
-			.button:hover
-			{
-				background-color:  #ff7800;
-			}
-			
-			.button:active
-			{
-				background-color:  #ff7800;
-			}
-
-	form input.text,
-	form select,
-	form textarea
-	{
-		position: relative;
-		-webkit-appearance: none;
-		border: 0;
-		background: #fff;
-		background: rgba(255,255,255,0.75);
-		border-radius: 0.35em;
-		padding: 0.1em 0.25em 0.1em 0.25em;
-		box-shadow: inset 0 0.1em 0.1em 0 rgba(0,0,0,0.05);
-		border: solid 1px rgba(0,0,0,0.15);
-		-moz-transition: all 0.35s ease-in-out;
-		-webkit-transition: all 0.35s ease-in-out;
-		-o-transition: all 0.35s ease-in-out;
-		-ms-transition: all 0.35s ease-in-out;
-		transition: all 0.35s ease-in-out;
-	}
-
-	form input.text:focus,
-	form select:focus,
-	form textarea:focus
-	{
-		box-shadow: 0 0 2px 1px #8ededc;
-		background: #fff;
-	}
